--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Haozhan (Tom) Tang # the website title (if blank, full name will be used instead)
-first_name: Haozhan (Tom)
+title: Tom (Haozhan) Tang # the website title (if blank, full name will be used instead)
+first_name: Haozhan
 middle_name:
 last_name: Tang
 email: haozhant@andrew.cmu.edu
